--- a/module-2/medium_weather_app/pubspec.yaml
+++ b/module-2/medium_weather_app/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   get: ^4.7.2
   geolocator: ^14.0.0
   app_settings: ^6.1.1
+  geocoding: ^3.0.0
+  http: ^1.4.0
+  flutter_typeahead: ^5.2.0
 
 dev_dependencies:
   flutter_test:
