--- a/module-2/medium_weather_app/pubspec.yaml
+++ b/module-2/medium_weather_app/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
     geocoding: ^3.0.0
     http: ^1.4.0
     flutter_typeahead: ^5.2.0
+    flutter_dotenv: ^5.2.1
 
 dev_dependencies:
     flutter_test:
@@ -42,9 +43,8 @@ flutter:
     uses-material-design: true
 
     # To add assets to your application, add an assets section, like this:
-    # assets:
-    #   - images/a_dot_burr.jpeg
-    #   - images/a_dot_ham.jpeg
+    assets:
+        - .env
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/to/resolution-aware-images
