--- a/module-2/medium_weather_app/android/app/src/main/AndroidManifest.xml
+++ b/module-2/medium_weather_app/android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         </activity>
         <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
         <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
