--- a/module-2/medium_weather_app/ios/Runner/Info.plist
+++ b/module-2/medium_weather_app/ios/Runner/Info.plist
@@ -10,6 +10,14 @@
 	<key>NSLocalNetworkUsageDescription</key>
 	<string>Check internet connection status</string>
 
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>This app requires access to the local network for debugging purposes.</string>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_dartobservatory._tcp</string>
+	</array>
+
+
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
