--- a/module-2/medium_weather_app/ios/Runner/Info.plist
+++ b/module-2/medium_weather_app/ios/Runner/Info.plist
@@ -18,6 +18,14 @@
 		<string>_services._dns-sd._udp</string>
 	</array>
 
+	<key>NSLocalNetworkUsageDescription</key>
+		<string>This app needs access to your local network to discover and connect to devices</string>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_services._tcp</string>
+		<string>_http._tcp</string>
+	</array>
+
 
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
