--- a/module-3/advanced_weather_app/pubspec.yaml
+++ b/module-3/advanced_weather_app/pubspec.yaml
@@ -69,7 +69,8 @@ flutter:
     # To add assets to your application, add an assets section, like this:
     assets:
         - .env
-    #   - images/a_dot_ham.jpeg
+        - assets/
+        - assets/background_weather_app.jpg
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/to/resolution-aware-images
