--- a/module-3/advanced_weather_app/pubspec.yaml
+++ b/module-3/advanced_weather_app/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
     connectivity_plus: ^6.1.4
     internet_connection_checker: ^3.0.1
     lottie: ^3.3.1
+    fl_chart: ^1.0.0
 
 dev_dependencies:
     flutter_test:
