--- a/module-3/advanced_weather_app/pubspec.yaml
+++ b/module-3/advanced_weather_app/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     internet_connection_checker: ^3.0.1
     lottie: ^3.3.1
     fl_chart: ^1.0.0
+    scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
     flutter_test:
