--- a/module-4/diary_app/pubspec.yaml
+++ b/module-4/diary_app/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
     firebase_core: ^3.14.0
     firebase_auth: ^5.6.0
     google_sign_in: ^6.3.0
-    google_fonts: ^6.2.1
+    get: ^4.7.2
 
 dev_dependencies:
     flutter_test:
@@ -63,7 +63,8 @@ flutter:
     # To add assets to your application, add an assets section, like this:
     assets:
         - assets/bacgound_flowers.jpg
-    #   - images/a_dot_ham.jpeg
+        - assets/icons/google-logo.png
+        - assets/icons/github_icon.png
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/to/resolution-aware-images
@@ -76,12 +77,13 @@ flutter:
     # "family" key with the font family name, and a "fonts" key with a
     # list giving the asset and other descriptors for the font. For
     # example:
-    # fonts:
-    #   - family: Schyler
-    #     fonts:
-    #       - asset: fonts/Schyler-Regular.ttf
-    #       - asset: fonts/Schyler-Italic.ttf
-    #         style: italic
+    fonts:
+        - family: Tangerine
+          fonts:
+              - asset: assets/fonts/Tangerine-Regular.ttf
+                weight: 400
+              - asset: assets/fonts/Tangerine-Bold.ttf
+                weight: 700
     #   - family: Trajan Pro
     #     fonts:
     #       - asset: fonts/TrajanPro.ttf
