--- a/module-4/diary_app/pubspec.yaml
+++ b/module-4/diary_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     firebase_auth: ^5.6.0
     google_sign_in: ^6.3.0
     get: ^4.7.2
+    url_launcher: ^6.3.1
 
 dev_dependencies:
     flutter_test:
