--- a/module-4/diary_app/pubspec.yaml
+++ b/module-4/diary_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
     google_sign_in: ^6.3.0
     get: ^4.7.2
     url_launcher: ^6.3.1
+    iconsax: ^0.0.8
 
 dev_dependencies:
     flutter_test:
@@ -64,6 +65,7 @@ flutter:
     # To add assets to your application, add an assets section, like this:
     assets:
         - assets/bacgound_flowers.jpg
+        - assets/images/default_user.png
         - assets/icons/google-logo.png
         - assets/icons/github_icon.png
 
