--- a/module-4/diary_app/ios/Runner/Info.plist
+++ b/module-4/diary_app/ios/Runner/Info.plist
@@ -2,17 +2,21 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+
 	<key>CFBundleURLTypes</key>
 	<array>
 	<dict>
 		<key>CFBundleTypeRole</key>
-		<string>Editor</string>
+		<string>None</string>
+		<key>CFBundleURLName</key>
+		<string>auth0</string>
 		<key>CFBundleURLSchemes</key>
 		<array>
-		<string>com.googleusercontent.apps.459429749055-eglig399p7bi6fv6261sfl7mk6vklku4</string>
+		<string>com.example.diaryApp</string>
 		</array>
 	</dict>
 	</array>
+
 
 	<key>NSLocalNetworkUsageDescription</key>
 	<string>Used for debugging purposes</string>
