--- a/module-4/diary_app/pubspec.yaml
+++ b/module-4/diary_app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
     intl: ^0.20.2
     auth0_flutter: ^1.11.0
     flutter_dotenv: ^5.2.1
+    flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
     flutter_test:
@@ -70,6 +71,7 @@ flutter:
         - assets/images/default_user.png
         - assets/icons/google-logo.png
         - assets/icons/github_icon.png
+        - .env
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/to/resolution-aware-images
@@ -85,10 +87,7 @@ flutter:
     fonts:
         - family: Tangerine
           fonts:
-              - asset: assets/fonts/Tangerine-Regular.ttf
-                weight: 400
-              - asset: assets/fonts/Tangerine-Bold.ttf
-                weight: 700
+              - asset: assets/fonts/PinyonScript-Regular.ttf
     #   - family: Trajan Pro
     #     fonts:
     #       - asset: fonts/TrajanPro.ttf
