--- a/module-5/advanced_diary_app/ios/Runner/Info.plist
+++ b/module-5/advanced_diary_app/ios/Runner/Info.plist
@@ -6,10 +6,12 @@
 	<array>
 	<dict>
 		<key>CFBundleTypeRole</key>
-		<string>Editor</string>
+		<string>None</string>
+		<key>CFBundleURLName</key>
+		<string>auth0</string>
 		<key>CFBundleURLSchemes</key>
 		<array>
-		<string>com.googleusercontent.apps.459429749055-eglig399p7bi6fv6261sfl7mk6vklku4</string>
+		<string>com.example.diaryApp</string>
 		</array>
 	</dict>
 	</array>
