--- a/module-5/advanced_diary_app/pubspec.yaml
+++ b/module-5/advanced_diary_app/pubspec.yaml
@@ -24,12 +24,13 @@ dependencies:
     cupertino_icons: ^1.0.8
     firebase_core: ^3.14.0
     firebase_auth: ^5.6.0
-    google_sign_in: ^6.3.0
     get: ^4.7.2
-    url_launcher: ^6.3.1
     iconsax: ^0.0.8
     cloud_firestore: ^5.6.9
     intl: ^0.20.2
+    auth0_flutter: ^1.11.0
+    flutter_dotenv: ^5.2.1
+    flutter_secure_storage: ^9.2.4
     table_calendar: ^3.2.0
 
 dev_dependencies:
@@ -59,6 +60,7 @@ flutter:
         - assets/images/default_user.png
         - assets/icons/google-logo.png
         - assets/icons/github_icon.png
+        - .env
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/to/resolution-aware-images
