done fixing error of android version

--- a/module-2/medium_weather_app/android/app/src/main/AndroidManifest.xml
+++ b/module-2/medium_weather_app/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:label="medium_weather_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="io.flutter.embedding.android.EnableImpeller" android:value="false" />
         
         <activity
             android:name=".MainActivity"
