--- a/module-3/advanced_weather_app/android/app/src/main/AndroidManifest.xml
+++ b/module-3/advanced_weather_app/android/app/src/main/AndroidManifest.xml
@@ -10,9 +10,11 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
-        android:label="medium_weather_app"
+        android:label="advanced_weather_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="io.flutter.embedding.android.EnableImpeller" android:value="false" />
         
         <activity
             android:name=".MainActivity"
