--- a/module-3/advanced_weather_app/android/gradle.properties
+++ b/module-3/advanced_weather_app/android/gradle.properties
@@ -1,3 +1,10 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+flutter.enable_impeller=false
+android.emulator.gpu=host
+org.gradle.daemon=true
+org.gradle.parallel=true
+android.enableR8=true
+org.gradle.java.home=/Library/Java/JavaVirtualMachines/temurin-17.jdk/Contents/Home
+kotlin.jvm.target.validation.mode=warning
