--- a/module-5/advanced_diary_app/ios/Runner/Info.plist
+++ b/module-5/advanced_diary_app/ios/Runner/Info.plist
@@ -15,6 +15,13 @@
 		</array>
 	</dict>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Required for authentication</string>
 
 	<key>NSLocalNetworkUsageDescription</key>
 	<string>Used for debugging purposes</string>
